@@ -11,7 +11,7 @@ public:
 	static int GetView(VECFILEITEMS& vecItems);
 
 	static int ByFolders(bool bBigThumbs, VECFILEITEMS& vecItems);
-	static int ByFiles(bool bBigThumbs, VECFILEITEMS& vecItems);
+	static int ByFiles(bool bBigThumbs, bool bHideParentDirItems, VECFILEITEMS& vecItems);
 	static int ByThumbPercent(bool bBigThumbs, bool bHideParentDirItems, int iPercent, VECFILEITEMS& vecItems);
 
 protected:
